Refactoring to support dependency-injecting configurable float vector operations